			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01u: *********************************

IMP: (9/20/04, GVG) Ability to abort ERC and DRC jobs

BUG: (9/20/04, GVG) ERC not properly detecting well contacts not connected to ground/power.
FIX: Iterate over Export in JNetwork and check if isGround() or isPower(). Even if contacts are not
explicitly connected, it won't complain if network has export gnd/power

IMP: (9/19/04, SMR) Serpentine transistors now know port information.

BUG: (9/19/04, SMR) Verilog output still gets busses wrong.
FIX: In Verilog.writeCellTopology(), must find proper signal in aggregate list.

************************* Version 8.01t: *********************************

IMP: (9/19/04, RK) Implement Variable Value caching and simple expression evaluation in VarContext. These two bypass 80% of the bean shell calls

IMP: (9/19/04, RK) Allow the user to enable more detailed progress reports.

BUG: (9/19/04, RK) For AnnC. Hierarchical NCC from two windows didn't compare the two root cells.

IMP: (9/18/04, SMR) HSpice waveform reader checks binary data for EOF.

BUG: (9/18/04, SMR) Verilog output still gets descending busses wrong.
FIX: In Verilog.writeCellTopology(), must take original bus size into account.

************************* Version 8.01s: *********************************

FIX: (9/18/04, JKG) Fixed waveform window cross-probing and cross-highlighting
     of exported networks

FIX: (9/18/04, SMR) Fix for verilog netlisting of busses

IMP: (9/17/04, GVG) New active size for new technology. All transistors affected.

************************* Version 8.01r: *********************************

FIX: (9/17/04, GVG) DRC fix related to Well regions not connected and serpentine transistors.

IMP: (9/17/04, GVG) Improvements to speed up incremental DRC.

IMP/MAN: (9/17/04, JKG) new command "Tool -> Logical Effort -> Clear LE Sizes in all Libraries"
