@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.01u: *********************************
 
+BUG: (9/20/04, GVG) DRC and minimum area checking: no merging correctly poly and transistor-poly areas
+while checking areas. FIX: Consider this case as exception and the first polysilicon layer found will be used.
+
 IMP: (9/20/04, GVG) Ability to abort ERC and DRC jobs
 
 BUG: (9/20/04, GVG) ERC not properly detecting well contacts not connected to ground/power.
